// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Pipeline Studio should render default pipeline studio 1`] = `
<div>
  <div
    class="container container"
  >
    <div
      class="bp3-popover-dismiss content"
    >
      <div>
        <div
          class="titleBar"
        >
          <div
            class="breadcrumbsMenu"
          >
            <div
              class="breadcrumbs"
            >
              <div>
                <a
                  class="breadcrumb"
                  href="/account/testAcc/ci/orgs/testOrg/projects/test/builds"
                >
                  test
                </a>
                <span
                  class="separator"
                >
                  /
                </span>
              </div>
              <div>
                <a
                  class="breadcrumb"
                  href="/account/testAcc/ci/orgs/testOrg/projects/test/pipelines"
                >
                  Pipelines
                </a>
                <span
                  class="separator"
                >
                  /
                </span>
              </div>
              <div>
                <span
                  class="lastBreadcrumb"
                >
                  Studio
                </span>
              </div>
            </div>
            <div
              class="pipelineNameContainer"
            >
              <div>
                <p
                  class="StyledProps--font StyledProps--main pipelineName"
                >
                  
                </p>
                <button
                  class="bp3-button bp3-minimal StyledProps--font Button--button Button--iconOnly StyledProps--main"
                  type="button"
                >
                  <span
                    class="bp3-icon StyledProps--main"
                  >
                    <svg
                      height="12"
                      viewBox="0 0 12 12"
                      width="12"
                    >
                      <g
                        fill="none"
                        fill-rule="evenodd"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                      >
                        <path
                          d="M8.66 1.823h0L2.244 8.239v1.75h1.75l6.416-6.416a1.75 1.75 0 00-1.75-1.75z"
                          stroke="#555770"
                        />
                        <path
                          d="M6.583 5.146l2.063-2.063"
                          opacity="0.3"
                          stroke="#606170"
                        />
                      </g>
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            class="pipelineStudioTitleContainer"
          >
            <div
              class="pipelineStudioTitle"
            >
              <div
                class="rectangle"
              >
                <span>
                  Pipeline Studio
                </span>
              </div>
            </div>
            <a
              class="topButtons"
              href="/account/testAcc/ci/orgs/testOrg/projects/test/pipeline-studio/pipelines/-1/ui/"
            >
              VISUAL
            </a>
            <a
              class="topButtons"
              href="/account/testAcc/ci/orgs/testOrg/projects/test/pipeline-studio/pipelines/-1/yaml/"
            >
              YAML
            </a>
          </div>
          <div>
            <div
              class="savePublishContainer"
            >
              <div>
                <span
                  class="Tag--main"
                >
                  <span
                    class="bp3-tag bp3-intent-primary bp3-minimal tagRender"
                  >
                    <span
                      class="bp3-text-overflow-ellipsis bp3-fill"
                    >
                      unsaved changes
                    </span>
                  </span>
                </span>
              </div>
              <div>
                <button
                  class="bp3-button bp3-minimal StyledProps--font Button--button StyledProps--main savePublishBtn StyledProps--intent-primary"
                  type="button"
                >
                  <span
                    class="bp3-icon bp3-icon-arrow-up StyledProps--main StyledProps--padding-right-xsmall"
                    icon="arrow-up"
                  >
                    <svg
                      data-icon="arrow-up"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        arrow-up
                      </desc>
                      <path
                        d="M13.7 6.3l-5-5C8.5 1.1 8.3 1 8 1s-.5.1-.7.3l-5 5c-.2.2-.3.4-.3.7 0 .6.5 1 1 1 .3 0 .5-.1.7-.3L7 4.4V14c0 .6.4 1 1 1s1-.4 1-1V4.4l3.3 3.3c.2.2.4.3.7.3.6 0 1-.4 1-1 0-.3-.1-.5-.3-.7z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <span
                    class="bp3-button-text"
                  >
                    Save and Publish
                  </span>
                </button>
              </div>
            </div>
            <div
              class="notificationContainer"
            >
              <div>
                <span
                  class="bp3-popover-wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <button
                      class="bp3-button bp3-minimal StyledProps--font Button--button StyledProps--main"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall StyledProps--color"
                      >
                        <svg
                          height="16"
                          viewBox="0 0 14 16"
                          width="16"
                        >
                          <path
                            d="M1.614 12.444v-.94l1.786-1.9-.007-.008a4.93 4.93 0 01-.665-2.485c0-2.618 1.995-4.741 4.455-4.741s4.456 2.123 4.456 4.74c0 .913-.245 1.764-.665 2.486l-.008.008 1.787 1.9v.94H1.613zm5.57 2.37c-.616 0-1.115-.53-1.115-1.185h2.228c0 .655-.499 1.185-1.114 1.185zm6.52-3.975l-1.377-1.463a6.2 6.2 0 00.425-2.265c0-3.068-2.202-5.598-5.012-5.896V0H6.626v1.215c-2.81.298-5.012 2.828-5.012 5.896 0 .802.152 1.567.425 2.265L.663 10.839a.613.613 0 00-.163.42v2.37h4.455c0 1.308 1 2.37 2.228 2.37s2.228-1.062 2.228-2.37h4.455v-2.37a.613.613 0 00-.163-.42z"
                            fill="#22272D"
                          />
                        </svg>
                      </span>
                      <span
                        class="bp3-button-text"
                      >
                        Notifications
                      </span>
                    </button>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="rightBar"
    >
      <div />
      <button
        class="iconButton"
        disabled=""
      >
        <span
          class="bp3-icon StyledProps--main"
          title="Template Library"
        >
          <svg
            height="16"
            viewBox="0 0 12 13"
            width="16"
          >
            <defs>
              <path
                d="M1.8 13c.2 0 .4-.3.4-.6V.6C2.2.3 2 0 1.8 0H.4C.2 0 0 .3 0 .6v11.7c0 .4.2.7.4.7h1.4zm8.8 0l.9-.3c.3-.1.5-.4.4-.8L8.9.6C8.8.3 8.5.1 8.1.2l-.9.3c-.4 0-.5.4-.5.7l3.1 11.3c.1.4.5.6.8.5zm-5 0c.2 0 .4-.3.4-.7V.6c0-.3-.2-.6-.4-.6H4.2c-.2 0-.4.3-.4.6v11.7c0 .4.2.7.4.7h1.4z"
                id="template-library_svg__a"
              />
            </defs>
            <clippath
              id="template-library_svg__b"
            >
              <use
                overflow="visible"
                xlink:href="#template-library_svg__a"
              />
            </clippath>
            <path
              clip-path="url(#template-library_svg__b)"
              d="M-5-5h22v23H-5z"
              fill="#25a6f7"
            />
          </svg>
        </span>
      </button>
      <button
        class="iconButton"
      >
        <span
          class="bp3-icon StyledProps--main"
          title="Input Variables"
        >
          <svg
            height="16"
            viewBox="0 0 15.4 12.2"
            width="16"
          >
            <defs>
              <path
                d="M12.5 6.1l-.2-.4c-.1-.3-.2-.4-.2-.5l-.2-.5c-.2-.4-.3-.6-.5-.6s-.4.2-.6.7c-.1 0-.2-.1-.2-.2 0-.2.1-.4.4-.7.2-.3.5-.4.6-.4.4 0 .8.5 1.2 1.6l.2.3.1-.2c.7-1.1 1.3-1.7 1.8-1.7.1 0 .3 0 .4.1l-.6.6h-.2c-.4 0-.8.4-1.3 1.3l-.1.2.1.3c.4 1.2.8 1.8 1.1 1.8.3 0 .5-.2.6-.6.1.1.1.1.1.2 0 .2-.1.4-.4.6-.3.2-.5.4-.7.4-.4 0-.8-.5-1.2-1.6l-.1-.4-.1.3c-.7 1.2-1.3 1.8-2 1.8-.2 0-.4-.1-.6-.2l.6-.6c.1.1.2.2.4.2.4 0 .8-.4 1.3-1.1l.3-.4v-.3zm-6.1-.5L2.6.9h3.8s1.3-.1 1.8.6.6 1.8.6 1.8h.5L9.1 0H0v.5l4.7 5.7L0 11.7v.5h9.3l.6-3.6-.5-.1s-.2.8-.8 1.5c-.6.7-3.1.6-3.1.6H2.1l4.3-5z"
                id="pipeline-variables_svg__a"
              />
            </defs>
            <clippath
              id="pipeline-variables_svg__b"
            >
              <use
                overflow="visible"
                xlink:href="#pipeline-variables_svg__a"
              />
            </clippath>
            <path
              clip-path="url(#pipeline-variables_svg__b)"
              d="M-5-5h25.4v22.2H-5z"
              fill="#9d7cff"
            />
          </svg>
        </span>
      </button>
      <button
        class="iconButton"
      >
        <span
          class="bp3-icon StyledProps--main"
          title="Run Pipeline"
        >
          <svg
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <defs>
              <path
                d="M7.2 10.6V5.4L10.6 8l-3.4 2.6zm4.4-3.3L7.4 4.1c-.3-.2-.6-.2-.9-.1-.3.2-.5.5-.5.8v6.4c0 .3.2.6.5.8.3.1.6.1.9-.1l4.2-3.2c.2-.2.3-.4.3-.7s-.1-.5-.3-.7zm1.1 5.4c-2.2 2.2-5.7 2.6-8.4.8s-3.6-5.1-2.4-8c1.2-2.9 4.3-4.6 7.4-4 3.1.6 5.3 3.3 5.3 6.5.1 1.8-.6 3.4-1.9 4.7zm2.7-7.8C13.8 1.1 9.6-.9 5.7.4 1.7 1.6-.7 5.6.2 9.6s4.5 6.8 8.6 6.4c4.1-.4 7.2-3.8 7.2-8 0-1.1-.2-2.1-.6-3.1z"
                id="run-pipeline_svg__a"
              />
            </defs>
            <clippath
              id="run-pipeline_svg__b"
            >
              <use
                overflow="visible"
                xlink:href="#run-pipeline_svg__a"
              />
            </clippath>
            <path
              clip-path="url(#run-pipeline_svg__b)"
              d="M-5-5h26v26H-5z"
              fill="#54b610"
            />
          </svg>
        </span>
      </button>
      <div />
    </div>
  </div>
</div>
`;

exports[`Test Pipeline Studio should render edit pipeline studio 1`] = `
<div>
  <div
    class="container container"
  >
    <div
      class="bp3-popover-dismiss content"
    >
      <div>
        <div
          class="titleBar"
        >
          <div
            class="breadcrumbsMenu"
          >
            <div
              class="breadcrumbs"
            >
              <div>
                <a
                  class="breadcrumb"
                  href="/account/testAcc/ci/orgs/testOrg/projects/test/builds"
                >
                  test
                </a>
                <span
                  class="separator"
                >
                  /
                </span>
              </div>
              <div>
                <a
                  class="breadcrumb"
                  href="/account/testAcc/ci/orgs/testOrg/projects/test/pipelines"
                >
                  Pipelines
                </a>
                <span
                  class="separator"
                >
                  /
                </span>
              </div>
              <div>
                <a
                  class="breadcrumb"
                  href="/account/testAcc/ci/orgs/testOrg/projects/test/pipeline-studio/pipelines/editPipeline/"
                >
                  test-p1
                </a>
                <span
                  class="separator"
                >
                  /
                </span>
              </div>
              <div>
                <span
                  class="lastBreadcrumb"
                >
                  Studio
                </span>
              </div>
            </div>
            <div
              class="pipelineNameContainer"
            >
              <div>
                <p
                  class="StyledProps--font StyledProps--main pipelineName"
                >
                  test-p1
                </p>
                <button
                  class="bp3-button bp3-minimal StyledProps--font Button--button Button--iconOnly StyledProps--main"
                  type="button"
                >
                  <span
                    class="bp3-icon StyledProps--main"
                  >
                    <svg
                      height="12"
                      viewBox="0 0 12 12"
                      width="12"
                    >
                      <g
                        fill="none"
                        fill-rule="evenodd"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                      >
                        <path
                          d="M8.66 1.823h0L2.244 8.239v1.75h1.75l6.416-6.416a1.75 1.75 0 00-1.75-1.75z"
                          stroke="#555770"
                        />
                        <path
                          d="M6.583 5.146l2.063-2.063"
                          opacity="0.3"
                          stroke="#606170"
                        />
                      </g>
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            class="pipelineStudioTitleContainer"
          >
            <div
              class="pipelineStudioTitle"
            >
              <div
                class="rectangle"
              >
                <span>
                  Pipeline Studio
                </span>
              </div>
            </div>
            <a
              class="topButtons"
              href="/account/testAcc/ci/orgs/testOrg/projects/test/pipeline-studio/pipelines/editPipeline/ui/"
            >
              VISUAL
            </a>
            <a
              class="topButtons"
              href="/account/testAcc/ci/orgs/testOrg/projects/test/pipeline-studio/pipelines/editPipeline/yaml/"
            >
              YAML
            </a>
          </div>
          <div>
            <div
              class="savePublishContainer"
            >
              <div />
              <div>
                <button
                  class="bp3-button bp3-minimal StyledProps--font Button--button StyledProps--main savePublishBtn StyledProps--intent-primary"
                  type="button"
                >
                  <span
                    class="bp3-icon bp3-icon-arrow-up StyledProps--main StyledProps--padding-right-xsmall"
                    icon="arrow-up"
                  >
                    <svg
                      data-icon="arrow-up"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        arrow-up
                      </desc>
                      <path
                        d="M13.7 6.3l-5-5C8.5 1.1 8.3 1 8 1s-.5.1-.7.3l-5 5c-.2.2-.3.4-.3.7 0 .6.5 1 1 1 .3 0 .5-.1.7-.3L7 4.4V14c0 .6.4 1 1 1s1-.4 1-1V4.4l3.3 3.3c.2.2.4.3.7.3.6 0 1-.4 1-1 0-.3-.1-.5-.3-.7z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <span
                    class="bp3-button-text"
                  >
                    Save and Publish
                  </span>
                </button>
              </div>
            </div>
            <div
              class="notificationContainer"
            >
              <div>
                <span
                  class="bp3-popover-wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <button
                      class="bp3-button bp3-minimal StyledProps--font Button--button StyledProps--main"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall StyledProps--color"
                      >
                        <svg
                          height="16"
                          viewBox="0 0 14 16"
                          width="16"
                        >
                          <path
                            d="M1.614 12.444v-.94l1.786-1.9-.007-.008a4.93 4.93 0 01-.665-2.485c0-2.618 1.995-4.741 4.455-4.741s4.456 2.123 4.456 4.74c0 .913-.245 1.764-.665 2.486l-.008.008 1.787 1.9v.94H1.613zm5.57 2.37c-.616 0-1.115-.53-1.115-1.185h2.228c0 .655-.499 1.185-1.114 1.185zm6.52-3.975l-1.377-1.463a6.2 6.2 0 00.425-2.265c0-3.068-2.202-5.598-5.012-5.896V0H6.626v1.215c-2.81.298-5.012 2.828-5.012 5.896 0 .802.152 1.567.425 2.265L.663 10.839a.613.613 0 00-.163.42v2.37h4.455c0 1.308 1 2.37 2.228 2.37s2.228-1.062 2.228-2.37h4.455v-2.37a.613.613 0 00-.163-.42z"
                            fill="#22272D"
                          />
                        </svg>
                      </span>
                      <span
                        class="bp3-button-text"
                      >
                        Notifications
                      </span>
                    </button>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="rightBar"
    >
      <div />
      <button
        class="iconButton"
        disabled=""
      >
        <span
          class="bp3-icon StyledProps--main"
          title="Template Library"
        >
          <svg
            height="16"
            viewBox="0 0 12 13"
            width="16"
          >
            <defs>
              <path
                d="M1.8 13c.2 0 .4-.3.4-.6V.6C2.2.3 2 0 1.8 0H.4C.2 0 0 .3 0 .6v11.7c0 .4.2.7.4.7h1.4zm8.8 0l.9-.3c.3-.1.5-.4.4-.8L8.9.6C8.8.3 8.5.1 8.1.2l-.9.3c-.4 0-.5.4-.5.7l3.1 11.3c.1.4.5.6.8.5zm-5 0c.2 0 .4-.3.4-.7V.6c0-.3-.2-.6-.4-.6H4.2c-.2 0-.4.3-.4.6v11.7c0 .4.2.7.4.7h1.4z"
                id="template-library_svg__a"
              />
            </defs>
            <clippath
              id="template-library_svg__b"
            >
              <use
                overflow="visible"
                xlink:href="#template-library_svg__a"
              />
            </clippath>
            <path
              clip-path="url(#template-library_svg__b)"
              d="M-5-5h22v23H-5z"
              fill="#25a6f7"
            />
          </svg>
        </span>
      </button>
      <button
        class="iconButton"
      >
        <span
          class="bp3-icon StyledProps--main"
          title="Input Variables"
        >
          <svg
            height="16"
            viewBox="0 0 15.4 12.2"
            width="16"
          >
            <defs>
              <path
                d="M12.5 6.1l-.2-.4c-.1-.3-.2-.4-.2-.5l-.2-.5c-.2-.4-.3-.6-.5-.6s-.4.2-.6.7c-.1 0-.2-.1-.2-.2 0-.2.1-.4.4-.7.2-.3.5-.4.6-.4.4 0 .8.5 1.2 1.6l.2.3.1-.2c.7-1.1 1.3-1.7 1.8-1.7.1 0 .3 0 .4.1l-.6.6h-.2c-.4 0-.8.4-1.3 1.3l-.1.2.1.3c.4 1.2.8 1.8 1.1 1.8.3 0 .5-.2.6-.6.1.1.1.1.1.2 0 .2-.1.4-.4.6-.3.2-.5.4-.7.4-.4 0-.8-.5-1.2-1.6l-.1-.4-.1.3c-.7 1.2-1.3 1.8-2 1.8-.2 0-.4-.1-.6-.2l.6-.6c.1.1.2.2.4.2.4 0 .8-.4 1.3-1.1l.3-.4v-.3zm-6.1-.5L2.6.9h3.8s1.3-.1 1.8.6.6 1.8.6 1.8h.5L9.1 0H0v.5l4.7 5.7L0 11.7v.5h9.3l.6-3.6-.5-.1s-.2.8-.8 1.5c-.6.7-3.1.6-3.1.6H2.1l4.3-5z"
                id="pipeline-variables_svg__a"
              />
            </defs>
            <clippath
              id="pipeline-variables_svg__b"
            >
              <use
                overflow="visible"
                xlink:href="#pipeline-variables_svg__a"
              />
            </clippath>
            <path
              clip-path="url(#pipeline-variables_svg__b)"
              d="M-5-5h25.4v22.2H-5z"
              fill="#9d7cff"
            />
          </svg>
        </span>
      </button>
      <button
        class="iconButton"
      >
        <span
          class="bp3-icon StyledProps--main"
          title="Run Pipeline"
        >
          <svg
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <defs>
              <path
                d="M7.2 10.6V5.4L10.6 8l-3.4 2.6zm4.4-3.3L7.4 4.1c-.3-.2-.6-.2-.9-.1-.3.2-.5.5-.5.8v6.4c0 .3.2.6.5.8.3.1.6.1.9-.1l4.2-3.2c.2-.2.3-.4.3-.7s-.1-.5-.3-.7zm1.1 5.4c-2.2 2.2-5.7 2.6-8.4.8s-3.6-5.1-2.4-8c1.2-2.9 4.3-4.6 7.4-4 3.1.6 5.3 3.3 5.3 6.5.1 1.8-.6 3.4-1.9 4.7zm2.7-7.8C13.8 1.1 9.6-.9 5.7.4 1.7 1.6-.7 5.6.2 9.6s4.5 6.8 8.6 6.4c4.1-.4 7.2-3.8 7.2-8 0-1.1-.2-2.1-.6-3.1z"
                id="run-pipeline_svg__a"
              />
            </defs>
            <clippath
              id="run-pipeline_svg__b"
            >
              <use
                overflow="visible"
                xlink:href="#run-pipeline_svg__a"
              />
            </clippath>
            <path
              clip-path="url(#run-pipeline_svg__b)"
              d="M-5-5h26v26H-5z"
              fill="#54b610"
            />
          </svg>
        </span>
      </button>
      <div />
    </div>
  </div>
</div>
`;
